# workflow-configuration

./: .gitignore  Dockerfile  Makefile  README.md  all-tess-MODEL.mk  all-tess-frak2021.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-shrink-extract-regions.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-segment-tesseract-ocropy-dewarp-ocr-ocropy-tesseract.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-segment-tesseract-ocropy-shrink-dewarp-ocr-ocropy-tesseract.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-segment-tesseract-ocropy-shrink-extract-regions.mk  fix-page-coords.py  gt-binarize-page-olena-sauvola-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-deskew-region-tesseract-resegment-dewarp-ocr-ocropy-tesseract-extract-lines.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-deskew-region-tesseract-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-shrink-extract-regions.mk  gt-binarize-page-olena-sauvola-deskew-page-ocropy-clip-deskew-region-tesseract-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-wolf-denoise-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-wolf-denoise-ocropy-deskew-page-ocropy-clip-deskew-region-tesseract-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-wolf-denoise-ocropy-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt.mk  mets-add-nsprefix-mets.xsl  mets-alias-filegrp.xsl  mets-copy-agents.xsl  ocrd-export-larex  ocrd-import  ocrd-make  ocrd-page-transform  ocrd-tool.json  page-add-nsprefix-pc.xsl  page-ensure-textequiv-index.xsl  page-ensure-textequiv-unicode.xsl  page-extract-glyphs.xsl  page-extract-lines.xsl  page-extract-words.xsl  page-fix-coords.xsl  page-flatten-regions.xsl  page-move-alternativeimage-below-page.xsl  (+18 more)
.circleci/: config.yml
workflow_configuration/: Makefile  all-tess-MODEL.mk  all-tess-frak2021.mk  cat-files.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-segment-tesseract-ocropy-dewarp-ocr-ocropy-tesseract.mk  crop-anyocr-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-segment-tesseract-ocropy-shrink-extract-regions.mk  download-input-grp.mk  fix_invalid_readingorder.py  fix_page_coords.py  gt-binarize-page-olena-sauvola-denoise-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-deskew-region-tesseract-resegment-dewarp-ocr-ocropy-tesseract-extract-lines.mk  gt-binarize-page-olena-sauvola-denoise-ocropy-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-sauvola-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-wolf-denoise-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  gt-binarize-page-olena-wolf-denoise-ocropy-deskew-page-ocropy-clip-resegment-dewarp-ocr-ocropy-tesseract.mk  header2unordered.py  heading2unordered.py  lines2orientation.py  ocrd-make.sh  ocrd-tool.json  ocrd_import.py  ocrd_page_transform.py  page-ensure-readingorder.xsl  page-ensure-textequiv-conf.xsl  page-extract-lines.xsl  page-flatten-tableregions.xsl  page-flatten-textregions.xsl  page-remove-empty-lines.xsl  page-remove-empty-readingorder.xsl  page-remove-glyphs.xsl  page-remove-lines.xsl  page-remove-regions.xsl  page-remove-textequiv.xsl  page-remove-words.xsl  page-rename-id-clashes.xsl  page-sort-textequiv-index.xsl  page-unflatten-tableregions.xsl  shellscript.py  transform.mk  xsl_transform.py
