[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "workflow_configuration"
authors = [
    {name = "Robert Sachunsky", email = "sachunsky@informatik.uni-leipzig.de"},
]
description = "a makefilization for OCR-D workflows, with configuration examples"
readme = "README.md"
license = {text = "Apache License 2.0"}
requires-python = ">=3.8"
keywords = ["ocr", "ocr-d"]

dynamic = ["version", "dependencies", "optional-dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
ocrd-import = "workflow_configuration.ocrd_import:cli"
ocrd-page-transform = "workflow_configuration.ocrd_page_transform:cli"
page-add-nsprefix-pc = "workflow_configuration.xsl_transform:cli"
page-ensure-readingorder = "workflow_configuration.xsl_transform:cli"
page-ensure-textequiv-conf = "workflow_configuration.xsl_transform:cli"
page-ensure-textequiv-index = "workflow_configuration.xsl_transform:cli"
page-ensure-textequiv-unicode = "workflow_configuration.xsl_transform:cli"
page-extract-glyphs = "workflow_configuration.xsl_transform:cli"
page-extract-lines = "workflow_configuration.xsl_transform:cli"
page-extract-text = "workflow_configuration.xsl_transform:cli"
page-extract-words = "workflow_configuration.xsl_transform:cli"
page-fix-coords = "workflow_configuration.xsl_transform:cli"
page-flatten-tableregions = "workflow_configuration.xsl_transform:cli"
page-move-alternativeimage-below-page = "workflow_configuration.xsl_transform:cli"
page-remove-all-regions = "workflow_configuration.xsl_transform:cli"
page-remove-alternativeimages = "workflow_configuration.xsl_transform:cli"
page-remove-dead-regionrefs = "workflow_configuration.xsl_transform:cli"
page-remove-empty-lines = "workflow_configuration.xsl_transform:cli"
page-remove-empty-readingorder = "workflow_configuration.xsl_transform:cli"
page-remove-empty-text-regions = "workflow_configuration.xsl_transform:cli"
page-remove-glyphs = "workflow_configuration.xsl_transform:cli"
page-remove-lines = "workflow_configuration.xsl_transform:cli"
page-remove-metadataitem = "workflow_configuration.xsl_transform:cli"
page-remove-regions = "workflow_configuration.xsl_transform:cli"
page-remove-text-regions = "workflow_configuration.xsl_transform:cli"
page-remove-textequiv = "workflow_configuration.xsl_transform:cli"
page-remove-words = "workflow_configuration.xsl_transform:cli"
page-rename-id-clashes = "workflow_configuration.xsl_transform:cli"
page-rm-nsprefix-pc = "workflow_configuration.xsl_transform:cli"
page-set-nsversion-2019 = "workflow_configuration.xsl_transform:cli"
page-sort-textequiv-index = "workflow_configuration.xsl_transform:cli"
page-textequiv-lines-to-regions = "workflow_configuration.xsl_transform:cli"
page-textequiv-words-to-lines = "workflow_configuration.xsl_transform:cli"
page-unflatten-tableregions = "workflow_configuration.xsl_transform:cli"
mets-add-nsprefix-mets = "workflow_configuration.xsl_transform:cli"
mets-alias-filegrp = "workflow_configuration.xsl_transform:cli"
mets-copy-agents = "workflow_configuration.xsl_transform:cli"

[project.urls]
Homepage = "https://github.com/bertsky/workflow_configuration"
Repository = "https://github.com/bertsky/workflow_configuration.git"


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["workflow_configuration"]
package-data = {"*" = ["*.json", "*.xsl", "*.mk"]}
